# email-assistant

./: .gitignore  README.md  config.yaml  pyproject.toml
src/email_assistant/: main.py  system_init.py
src/email_assistant/agents/: __init__.py  agent_nodes.py  agent_state.py  email_agent.py
src/email_assistant/config/: __init__.py  email_config.py
src/email_assistant/models/: __init__.py  contacts_model.py  database.py  scheduler_task_model.py
src/email_assistant/service/: __init__.py  contact_service.py  email_client.py  email_listener.py  email_listener_idle.py  email_management_service.py  receive_emails_service.py  scheduler_service.py  send_email_service.py  task_manager.py
src/email_assistant/tools/: __init__.py  contact_tool.py  email_tool.py  scheduler_task_tool.py  send_email_tool.py
src/email_assistant/utils/: __init.py
